--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Contacts</string>
     <string name="description_picture">Picture of contact</string>
+    <string name="title_new_contact">New contact</string>
+    <string name="title_search">Search contact</string>
 </resources>
