--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="description_picture">Picture of contact</string>
     <string name="title_new_contact">New contact</string>
     <string name="title_search">Search contact</string>
+    <string name="title_switch">Change view</string>
 </resources>
