--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_telephone">Telephone</string>
     <string name="title_email">Email</string>
     <string name="title_address">Address</string>
+    <string name="title_add_contact">Add contact</string>
 </resources>
